feat: generar archvios para kaggle

--- a/src/competencia/experimento/train.ipynb
+++ b/src/competencia/experimento/train.ipynb
@@ -44,9 +44,7 @@
   {
    "cell_type": "markdown",
    "id": "633c0d7b-0d92-4865-b0e5-ea4476e4bc87",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Parametros LGBM"
    ]
@@ -103,9 +101,7 @@
   {
    "cell_type": "markdown",
    "id": "e5a9cad3-1d63-4852-a5e4-3b0a631b543f",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Librerias"
    ]
@@ -168,7 +164,9 @@
   {
    "cell_type": "markdown",
    "id": "05feb21e-f05f-47df-9d6f-ebb8ae1b6233",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Tomo hiperparametros"
    ]
@@ -798,8 +796,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "0241edac-e3bc-4acd-9d55-3a4a2ca62b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 164313 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>numero_de_cliente</th><th scope=col>foto_mes</th><th scope=col>prob</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>249221323</td><td>202106</td><td>1.016947e-05</td></tr>\n",
+       "\t<tr><td>249227600</td><td>202106</td><td>1.410595e-05</td></tr>\n",
+       "\t<tr><td>249234235</td><td>202106</td><td>7.295603e-03</td></tr>\n",
+       "\t<tr><td>249244449</td><td>202106</td><td>2.155944e-04</td></tr>\n",
+       "\t<tr><td>249244739</td><td>202106</td><td>1.829485e-04</td></tr>\n",
+       "\t<tr><td>249255456</td><td>202106</td><td>7.916184e-05</td></tr>\n",
+       "\t<tr><td>249255747</td><td>202106</td><td>2.161996e-05</td></tr>\n",
+       "\t<tr><td>249257429</td><td>202106</td><td>1.710508e-04</td></tr>\n",
+       "\t<tr><td>249273979</td><td>202106</td><td>6.991048e-05</td></tr>\n",
+       "\t<tr><td>249274782</td><td>202106</td><td>8.921161e-04</td></tr>\n",
+       "\t<tr><td>249275806</td><td>202106</td><td>4.077387e-05</td></tr>\n",
+       "\t<tr><td>249293450</td><td>202106</td><td>1.509819e-04</td></tr>\n",
+       "\t<tr><td>249301323</td><td>202106</td><td>3.145189e-04</td></tr>\n",
+       "\t<tr><td>249302860</td><td>202106</td><td>2.765385e-04</td></tr>\n",
+       "\t<tr><td>249303228</td><td>202106</td><td>3.199695e-04</td></tr>\n",
+       "\t<tr><td>249320580</td><td>202106</td><td>1.066267e-02</td></tr>\n",
+       "\t<tr><td>249321238</td><td>202106</td><td>2.725129e-05</td></tr>\n",
+       "\t<tr><td>249326925</td><td>202106</td><td>2.131683e-03</td></tr>\n",
+       "\t<tr><td>249333783</td><td>202106</td><td>2.983358e-05</td></tr>\n",
+       "\t<tr><td>249343629</td><td>202106</td><td>2.339534e-05</td></tr>\n",
+       "\t<tr><td>249350768</td><td>202106</td><td>4.187067e-04</td></tr>\n",
+       "\t<tr><td>249353766</td><td>202106</td><td>3.739290e-04</td></tr>\n",
+       "\t<tr><td>249363100</td><td>202106</td><td>3.441372e-05</td></tr>\n",
+       "\t<tr><td>249363168</td><td>202106</td><td>4.056885e-04</td></tr>\n",
+       "\t<tr><td>249364628</td><td>202106</td><td>1.388521e-04</td></tr>\n",
+       "\t<tr><td>249365798</td><td>202106</td><td>1.422909e-04</td></tr>\n",
+       "\t<tr><td>249366447</td><td>202106</td><td>3.649904e-05</td></tr>\n",
+       "\t<tr><td>249366814</td><td>202106</td><td>1.000988e-05</td></tr>\n",
+       "\t<tr><td>249368642</td><td>202106</td><td>4.266102e-04</td></tr>\n",
+       "\t<tr><td>249369513</td><td>202106</td><td>1.145441e-05</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>1597251555</td><td>202106</td><td>0.0438634361</td></tr>\n",
+       "\t<tr><td>1597272563</td><td>202106</td><td>0.0046659978</td></tr>\n",
+       "\t<tr><td>1597445254</td><td>202106</td><td>0.0009941357</td></tr>\n",
+       "\t<tr><td>1597466842</td><td>202106</td><td>0.0035116275</td></tr>\n",
+       "\t<tr><td>1597472675</td><td>202106</td><td>0.0081282751</td></tr>\n",
+       "\t<tr><td>1597503887</td><td>202106</td><td>0.0656429854</td></tr>\n",
+       "\t<tr><td>1597522333</td><td>202106</td><td>0.0343334080</td></tr>\n",
+       "\t<tr><td>1597542829</td><td>202106</td><td>0.0183655330</td></tr>\n",
+       "\t<tr><td>1597560771</td><td>202106</td><td>0.0363064697</td></tr>\n",
+       "\t<tr><td>1597582940</td><td>202106</td><td>0.0384666032</td></tr>\n",
+       "\t<tr><td>1597645801</td><td>202106</td><td>0.0345170079</td></tr>\n",
+       "\t<tr><td>1597703999</td><td>202106</td><td>0.0013314240</td></tr>\n",
+       "\t<tr><td>1597704144</td><td>202106</td><td>0.0124072918</td></tr>\n",
+       "\t<tr><td>1597704366</td><td>202106</td><td>0.0027332671</td></tr>\n",
+       "\t<tr><td>1597769268</td><td>202106</td><td>0.0051869331</td></tr>\n",
+       "\t<tr><td>1597771164</td><td>202106</td><td>0.0245450365</td></tr>\n",
+       "\t<tr><td>1597799678</td><td>202106</td><td>0.0009279749</td></tr>\n",
+       "\t<tr><td>1597913368</td><td>202106</td><td>0.0316124042</td></tr>\n",
+       "\t<tr><td>1598106408</td><td>202106</td><td>0.0082762352</td></tr>\n",
+       "\t<tr><td>1598127775</td><td>202106</td><td>0.0268354827</td></tr>\n",
+       "\t<tr><td>1598157023</td><td>202106</td><td>0.0558587543</td></tr>\n",
+       "\t<tr><td>1598163070</td><td>202106</td><td>0.0042788782</td></tr>\n",
+       "\t<tr><td>1598187647</td><td>202106</td><td>0.0037172975</td></tr>\n",
+       "\t<tr><td>1598190935</td><td>202106</td><td>0.0552544132</td></tr>\n",
+       "\t<tr><td>1598246212</td><td>202106</td><td>0.0217082507</td></tr>\n",
+       "\t<tr><td>1598368433</td><td>202106</td><td>0.0022949743</td></tr>\n",
+       "\t<tr><td>1598419415</td><td>202106</td><td>0.0132591004</td></tr>\n",
+       "\t<tr><td>1598425905</td><td>202106</td><td>0.0564697941</td></tr>\n",
+       "\t<tr><td>1598470389</td><td>202106</td><td>0.0062586428</td></tr>\n",
+       "\t<tr><td>1598550167</td><td>202106</td><td>0.0282504978</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 164313 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " numero\\_de\\_cliente & foto\\_mes & prob\\\\\n",
+       " <int> & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 249221323 & 202106 & 1.016947e-05\\\\\n",
+       "\t 249227600 & 202106 & 1.410595e-05\\\\\n",
+       "\t 249234235 & 202106 & 7.295603e-03\\\\\n",
+       "\t 249244449 & 202106 & 2.155944e-04\\\\\n",
+       "\t 249244739 & 202106 & 1.829485e-04\\\\\n",
+       "\t 249255456 & 202106 & 7.916184e-05\\\\\n",
+       "\t 249255747 & 202106 & 2.161996e-05\\\\\n",
+       "\t 249257429 & 202106 & 1.710508e-04\\\\\n",
+       "\t 249273979 & 202106 & 6.991048e-05\\\\\n",
+       "\t 249274782 & 202106 & 8.921161e-04\\\\\n",
+       "\t 249275806 & 202106 & 4.077387e-05\\\\\n",
+       "\t 249293450 & 202106 & 1.509819e-04\\\\\n",
+       "\t 249301323 & 202106 & 3.145189e-04\\\\\n",
+       "\t 249302860 & 202106 & 2.765385e-04\\\\\n",
+       "\t 249303228 & 202106 & 3.199695e-04\\\\\n",
+       "\t 249320580 & 202106 & 1.066267e-02\\\\\n",
+       "\t 249321238 & 202106 & 2.725129e-05\\\\\n",
+       "\t 249326925 & 202106 & 2.131683e-03\\\\\n",
+       "\t 249333783 & 202106 & 2.983358e-05\\\\\n",
+       "\t 249343629 & 202106 & 2.339534e-05\\\\\n",
+       "\t 249350768 & 202106 & 4.187067e-04\\\\\n",
+       "\t 249353766 & 202106 & 3.739290e-04\\\\\n",
+       "\t 249363100 & 202106 & 3.441372e-05\\\\\n",
+       "\t 249363168 & 202106 & 4.056885e-04\\\\\n",
+       "\t 249364628 & 202106 & 1.388521e-04\\\\\n",
+       "\t 249365798 & 202106 & 1.422909e-04\\\\\n",
+       "\t 249366447 & 202106 & 3.649904e-05\\\\\n",
+       "\t 249366814 & 202106 & 1.000988e-05\\\\\n",
+       "\t 249368642 & 202106 & 4.266102e-04\\\\\n",
+       "\t 249369513 & 202106 & 1.145441e-05\\\\\n",
+       "\t ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 1597251555 & 202106 & 0.0438634361\\\\\n",
+       "\t 1597272563 & 202106 & 0.0046659978\\\\\n",
+       "\t 1597445254 & 202106 & 0.0009941357\\\\\n",
+       "\t 1597466842 & 202106 & 0.0035116275\\\\\n",
+       "\t 1597472675 & 202106 & 0.0081282751\\\\\n",
+       "\t 1597503887 & 202106 & 0.0656429854\\\\\n",
+       "\t 1597522333 & 202106 & 0.0343334080\\\\\n",
+       "\t 1597542829 & 202106 & 0.0183655330\\\\\n",
+       "\t 1597560771 & 202106 & 0.0363064697\\\\\n",
+       "\t 1597582940 & 202106 & 0.0384666032\\\\\n",
+       "\t 1597645801 & 202106 & 0.0345170079\\\\\n",
+       "\t 1597703999 & 202106 & 0.0013314240\\\\\n",
+       "\t 1597704144 & 202106 & 0.0124072918\\\\\n",
+       "\t 1597704366 & 202106 & 0.0027332671\\\\\n",
+       "\t 1597769268 & 202106 & 0.0051869331\\\\\n",
+       "\t 1597771164 & 202106 & 0.0245450365\\\\\n",
+       "\t 1597799678 & 202106 & 0.0009279749\\\\\n",
+       "\t 1597913368 & 202106 & 0.0316124042\\\\\n",
+       "\t 1598106408 & 202106 & 0.0082762352\\\\\n",
+       "\t 1598127775 & 202106 & 0.0268354827\\\\\n",
+       "\t 1598157023 & 202106 & 0.0558587543\\\\\n",
+       "\t 1598163070 & 202106 & 0.0042788782\\\\\n",
+       "\t 1598187647 & 202106 & 0.0037172975\\\\\n",
+       "\t 1598190935 & 202106 & 0.0552544132\\\\\n",
+       "\t 1598246212 & 202106 & 0.0217082507\\\\\n",
+       "\t 1598368433 & 202106 & 0.0022949743\\\\\n",
+       "\t 1598419415 & 202106 & 0.0132591004\\\\\n",
+       "\t 1598425905 & 202106 & 0.0564697941\\\\\n",
+       "\t 1598470389 & 202106 & 0.0062586428\\\\\n",
+       "\t 1598550167 & 202106 & 0.0282504978\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 164313 × 3\n",
+       "\n",
+       "| numero_de_cliente &lt;int&gt; | foto_mes &lt;int&gt; | prob &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| 249221323 | 202106 | 1.016947e-05 |\n",
+       "| 249227600 | 202106 | 1.410595e-05 |\n",
+       "| 249234235 | 202106 | 7.295603e-03 |\n",
+       "| 249244449 | 202106 | 2.155944e-04 |\n",
+       "| 249244739 | 202106 | 1.829485e-04 |\n",
+       "| 249255456 | 202106 | 7.916184e-05 |\n",
+       "| 249255747 | 202106 | 2.161996e-05 |\n",
+       "| 249257429 | 202106 | 1.710508e-04 |\n",
+       "| 249273979 | 202106 | 6.991048e-05 |\n",
+       "| 249274782 | 202106 | 8.921161e-04 |\n",
+       "| 249275806 | 202106 | 4.077387e-05 |\n",
+       "| 249293450 | 202106 | 1.509819e-04 |\n",
+       "| 249301323 | 202106 | 3.145189e-04 |\n",
+       "| 249302860 | 202106 | 2.765385e-04 |\n",
+       "| 249303228 | 202106 | 3.199695e-04 |\n",
+       "| 249320580 | 202106 | 1.066267e-02 |\n",
+       "| 249321238 | 202106 | 2.725129e-05 |\n",
+       "| 249326925 | 202106 | 2.131683e-03 |\n",
+       "| 249333783 | 202106 | 2.983358e-05 |\n",
+       "| 249343629 | 202106 | 2.339534e-05 |\n",
+       "| 249350768 | 202106 | 4.187067e-04 |\n",
+       "| 249353766 | 202106 | 3.739290e-04 |\n",
+       "| 249363100 | 202106 | 3.441372e-05 |\n",
+       "| 249363168 | 202106 | 4.056885e-04 |\n",
+       "| 249364628 | 202106 | 1.388521e-04 |\n",
+       "| 249365798 | 202106 | 1.422909e-04 |\n",
+       "| 249366447 | 202106 | 3.649904e-05 |\n",
+       "| 249366814 | 202106 | 1.000988e-05 |\n",
+       "| 249368642 | 202106 | 4.266102e-04 |\n",
+       "| 249369513 | 202106 | 1.145441e-05 |\n",
+       "| ⋮ | ⋮ | ⋮ |\n",
+       "| 1597251555 | 202106 | 0.0438634361 |\n",
+       "| 1597272563 | 202106 | 0.0046659978 |\n",
+       "| 1597445254 | 202106 | 0.0009941357 |\n",
+       "| 1597466842 | 202106 | 0.0035116275 |\n",
+       "| 1597472675 | 202106 | 0.0081282751 |\n",
+       "| 1597503887 | 202106 | 0.0656429854 |\n",
+       "| 1597522333 | 202106 | 0.0343334080 |\n",
+       "| 1597542829 | 202106 | 0.0183655330 |\n",
+       "| 1597560771 | 202106 | 0.0363064697 |\n",
+       "| 1597582940 | 202106 | 0.0384666032 |\n",
+       "| 1597645801 | 202106 | 0.0345170079 |\n",
+       "| 1597703999 | 202106 | 0.0013314240 |\n",
+       "| 1597704144 | 202106 | 0.0124072918 |\n",
+       "| 1597704366 | 202106 | 0.0027332671 |\n",
+       "| 1597769268 | 202106 | 0.0051869331 |\n",
+       "| 1597771164 | 202106 | 0.0245450365 |\n",
+       "| 1597799678 | 202106 | 0.0009279749 |\n",
+       "| 1597913368 | 202106 | 0.0316124042 |\n",
+       "| 1598106408 | 202106 | 0.0082762352 |\n",
+       "| 1598127775 | 202106 | 0.0268354827 |\n",
+       "| 1598157023 | 202106 | 0.0558587543 |\n",
+       "| 1598163070 | 202106 | 0.0042788782 |\n",
+       "| 1598187647 | 202106 | 0.0037172975 |\n",
+       "| 1598190935 | 202106 | 0.0552544132 |\n",
+       "| 1598246212 | 202106 | 0.0217082507 |\n",
+       "| 1598368433 | 202106 | 0.0022949743 |\n",
+       "| 1598419415 | 202106 | 0.0132591004 |\n",
+       "| 1598425905 | 202106 | 0.0564697941 |\n",
+       "| 1598470389 | 202106 | 0.0062586428 |\n",
+       "| 1598550167 | 202106 | 0.0282504978 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       numero_de_cliente foto_mes prob        \n",
+       "1      249221323         202106   1.016947e-05\n",
+       "2      249227600         202106   1.410595e-05\n",
+       "3      249234235         202106   7.295603e-03\n",
+       "4      249244449         202106   2.155944e-04\n",
+       "5      249244739         202106   1.829485e-04\n",
+       "6      249255456         202106   7.916184e-05\n",
+       "7      249255747         202106   2.161996e-05\n",
+       "8      249257429         202106   1.710508e-04\n",
+       "9      249273979         202106   6.991048e-05\n",
+       "10     249274782         202106   8.921161e-04\n",
+       "11     249275806         202106   4.077387e-05\n",
+       "12     249293450         202106   1.509819e-04\n",
+       "13     249301323         202106   3.145189e-04\n",
+       "14     249302860         202106   2.765385e-04\n",
+       "15     249303228         202106   3.199695e-04\n",
+       "16     249320580         202106   1.066267e-02\n",
+       "17     249321238         202106   2.725129e-05\n",
+       "18     249326925         202106   2.131683e-03\n",
+       "19     249333783         202106   2.983358e-05\n",
+       "20     249343629         202106   2.339534e-05\n",
+       "21     249350768         202106   4.187067e-04\n",
+       "22     249353766         202106   3.739290e-04\n",
+       "23     249363100         202106   3.441372e-05\n",
+       "24     249363168         202106   4.056885e-04\n",
+       "25     249364628         202106   1.388521e-04\n",
+       "26     249365798         202106   1.422909e-04\n",
+       "27     249366447         202106   3.649904e-05\n",
+       "28     249366814         202106   1.000988e-05\n",
+       "29     249368642         202106   4.266102e-04\n",
+       "30     249369513         202106   1.145441e-05\n",
+       "⋮      ⋮                 ⋮        ⋮           \n",
+       "164284 1597251555        202106   0.0438634361\n",
+       "164285 1597272563        202106   0.0046659978\n",
+       "164286 1597445254        202106   0.0009941357\n",
+       "164287 1597466842        202106   0.0035116275\n",
+       "164288 1597472675        202106   0.0081282751\n",
+       "164289 1597503887        202106   0.0656429854\n",
+       "164290 1597522333        202106   0.0343334080\n",
+       "164291 1597542829        202106   0.0183655330\n",
+       "164292 1597560771        202106   0.0363064697\n",
+       "164293 1597582940        202106   0.0384666032\n",
+       "164294 1597645801        202106   0.0345170079\n",
+       "164295 1597703999        202106   0.0013314240\n",
+       "164296 1597704144        202106   0.0124072918\n",
+       "164297 1597704366        202106   0.0027332671\n",
+       "164298 1597769268        202106   0.0051869331\n",
+       "164299 1597771164        202106   0.0245450365\n",
+       "164300 1597799678        202106   0.0009279749\n",
+       "164301 1597913368        202106   0.0316124042\n",
+       "164302 1598106408        202106   0.0082762352\n",
+       "164303 1598127775        202106   0.0268354827\n",
+       "164304 1598157023        202106   0.0558587543\n",
+       "164305 1598163070        202106   0.0042788782\n",
+       "164306 1598187647        202106   0.0037172975\n",
+       "164307 1598190935        202106   0.0552544132\n",
+       "164308 1598246212        202106   0.0217082507\n",
+       "164309 1598368433        202106   0.0022949743\n",
+       "164310 1598419415        202106   0.0132591004\n",
+       "164311 1598425905        202106   0.0564697941\n",
+       "164312 1598470389        202106   0.0062586428\n",
+       "164313 1598550167        202106   0.0282504978"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tb_prediccion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f8044f2-0374-4cdf-8e1a-289258387de5",
    "metadata": {},
    "outputs": [],
    "source": []
