--- a/src/competencia/experimento/train.ipynb
+++ b/src/competencia/experimento/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "30958176-d114-4d55-be59-bf5d44a41923",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "76e912d0-da53-499c-8e1e-d45964ba0f1c",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "1ef73cbd-7fe6-4b2b-988a-6315fe88759f",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "0b821dd1-2be4-46e9-bf3f-8f60f486660a",
    "metadata": {},
    "outputs": [],
@@ -164,16 +164,14 @@
   {
    "cell_type": "markdown",
    "id": "05feb21e-f05f-47df-9d6f-ebb8ae1b6233",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Tomo hiperparametros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "1d3ac271-38a3-4f04-8edf-bbe5e4dcdca1",
    "metadata": {},
    "outputs": [
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "d8f17ea4-61a2-4329-b122-57a00e1e89d3",
    "metadata": {},
    "outputs": [],
@@ -328,9 +326,60 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d49d372b-1b01-4356-91e1-76e75021f02c",
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dd675e95-ec66-40a9-8641-fa06f5a0a4c8",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CONTINUA</td><td>642824</td></tr>\n",
+       "\t<tr><td>BAJA+2  </td><td>  3938</td></tr>\n",
+       "\t<tr><td>BAJA+1  </td><td>  3447</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " clase\\_ternaria & N\\\\\n",
+       " <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t CONTINUA & 642824\\\\\n",
+       "\t BAJA+2   &   3938\\\\\n",
+       "\t BAJA+1   &   3447\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 × 2\n",
+       "\n",
+       "| clase_ternaria &lt;fct&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| CONTINUA | 642824 |\n",
+       "| BAJA+2   |   3938 |\n",
+       "| BAJA+1   |   3447 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  clase_ternaria N     \n",
+       "1 CONTINUA       642824\n",
+       "2 BAJA+2           3938\n",
+       "3 BAJA+1           3447"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# clase01 - me daba error con los max_bin\n",
     "dataset[, clase01 := ifelse(clase_ternaria %in% c(\"BAJA+1\", \"BAJA+2\"), 1L, 0L)]\n",
@@ -384,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "3d86230e-fd3d-4108-a868-ef0393116cfc",
    "metadata": {},
    "outputs": [
@@ -649,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "56f4f2c9-78cb-4fa5-9116-a881cec350ca",
    "metadata": {},
    "outputs": [],
@@ -658,14 +707,15 @@
     "\n",
     "param_normalizado <- copy(param_final)\n",
     "param_normalizado$min_data_in_leaf <-  round(param_final$min_data_in_leaf / PARAM$trainingstrategy$undersampling)\n",
-    "param_normalizado$num_threads <- 8  # no optimizable, solo controla CPU\n",
-    "param_normalizado$max_bin <- NULL         # <<--- clave para no re-definirlo en lgb.train()\n"
+    "param_normalizado$num_threads <- 8  # no optimizable, solo controla CPU\n"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8b57653a-9f4b-4f5b-8f55-5e1714aba736",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e83232c1-5f01-40af-989c-04bfc0d528db",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# entreno LightGBM\n",
     "\n",
@@ -673,6 +723,16 @@
     "  data= dtrain_final,\n",
     "  param= param_normalizado\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8409c534-553c-419a-9689-d197d6342710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_normalizado\n"
    ]
   },
   {
