feat: continuar experimento lags 1 y 2 + .1 us

--- a/src/churn/5002/feature_engineering.ipynb
+++ b/src/churn/5002/feature_engineering.ipynb
@@ -2,19 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "294f7aba-a745-4f13-88c4-c2cd2cb841bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/config.r\")\n",
-    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils/02_percentilizar_variables.R\")\n",
-    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils/03_agregar_lags_dataset.R\")"
+    "source(\"/home/vickydiliscia/dmeyf2025/src/churn/5002/config.r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
+   "id": "1b8f7071-1fb0-4047-99ac-c2ac57791b82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sourcing: 01_clase_ternaria.R\n",
+      "\n",
+      "Sourcing: 02_percentilizar_variables.R\n",
+      "\n",
+      "Sourcing: 03_agregar_lags_dataset.R\n",
+      "\n",
+      "Sourcing: 04_entrenar_modelos.R\n",
+      "\n",
+      "Sourcing: 05_ensamblar_promedio.R\n",
+      "\n",
+      "Sourcing: 06_realidad_inicializar.R\n",
+      "\n",
+      "Sourcing: 07_realidad_evaluar.R\n",
+      "\n",
+      "Sourcing: 08_particionar.R\n",
+      "\n",
+      "Sourcing: 09_armar_archivo_envios.R\n",
+      "\n",
+      "Sourcing: 10_enviar_kaggle.R\n",
+      "\n",
+      "Sourcing: 11_comparar_cortes.R\n",
+      "\n",
+      "✅ Todos los utils fueron cargados correctamente.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargo el index (que a su vez definirá la función)\n",
+    "source(file.path(PATH_UTILS, \"index.R\"))\n",
+    "\n",
+    "# Ejecuto la función que carga todos los utils\n",
+    "source_utils(PATH_UTILS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "a4d1c7eb-1a0e-49ef-98d6-2388026c1228",
    "metadata": {},
    "outputs": [],
@@ -27,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "02f56b44-4f65-4510-ab68-34bbc709f391",
    "metadata": {},
    "outputs": [
@@ -144,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "bfa02b44-baf4-41cd-aaa5-78b532ee21fe",
    "metadata": {},
    "outputs": [],
@@ -166,12 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "81acc646-4e17-4198-a693-d36d97b22418",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Agrego lags de orden 1\n",
     "# Lags de orden 1 y 2 para todos los meses por cliente\n",
     "dataset <- agregar_lags_dataset(\n",
     "  df = dataset,\n",
@@ -190,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "7ef7bad8-515f-4f13-9a70-7772ff5ec466",
    "metadata": {},
    "outputs": [],
    "source": [
     "fwrite(\n",
     "  dataset,\n",
-    "  file = file.path(PATH_DATASETS, \"competencia_01_features.csv.gz\"),\n",
+    "  file = file.path(DATASET_FEATURES),\n",
     "  sep = \",\"\n",
     ")"
    ]
