--- a/src/churn/5002/setup.ipynb
+++ b/src/churn/5002/setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "805be786-8a8e-45c6-8b43-2594400a84e8",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0bb28dd9-9ac3-45b5-b072-846a0515c705",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sourcing: 01_clase_ternaria.R\n",
+      "\n",
+      "Sourcing: 02_percentilizar_variables.R\n",
+      "\n",
+      "Sourcing: 03_agregar_lags_dataset.R\n",
+      "\n",
+      "Sourcing: 04_entrenar_modelos.R\n",
+      "\n",
+      "Sourcing: 05_ensamblar_promedio.R\n",
+      "\n",
+      "Sourcing: 06_realidad_inicializar.R\n",
+      "\n",
+      "Sourcing: 07_realidad_evaluar.R\n",
+      "\n",
+      "Sourcing: 08_particionar.R\n",
+      "\n",
+      "Sourcing: 09_armar_archivo_envios.R\n",
+      "\n",
+      "Sourcing: 10_enviar_kaggle.R\n",
+      "\n",
+      "Sourcing: 11_comparar_cortes.R\n",
+      "\n",
+      "✅ Todos los utils fueron cargados correctamente.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Cargo el index (que a su vez definirá la función)\n",
     "source(file.path(PATH_UTILS, \"index.R\"))\n",
@@ -72,29 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ba1b410a-4b22-48b1-bd2c-1e973889fdbb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "4067"
-      ],
-      "text/latex": [
-       "4067"
-      ],
-      "text/markdown": [
-       "4067"
-      ],
-      "text/plain": [
-       "[1] 4067"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Sys.getpid()\n"
    ]
