feat: setup optimizacion

--- a/src/churn/5002/preprocess.ipynb
+++ b/src/churn/5002/preprocess.ipynb
@@ -2,12 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "615aa3ae-7e78-4c9b-9ac4-f633c4982ab7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/config.r\")"
+    "source(\"/home/vickydiliscia/dmeyf2025/src/churn/5002/config.r\")\n",
+    "\n",
+    "# Cargo el index (que a su vez definirá la función)\n",
+    "source(file.path(PATH_UTILS, \"index.R\"))\n",
+    "\n",
+    "# Ejecuto la función que carga todos los utils\n",
+    "source_utils(PATH_UTILS)"
    ]
   },
   {
@@ -20,127 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4e20bdc1-868d-4312-8919-131cfbf29705",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: data.table\n",
-      "\n",
-      "Loading required package: parallel\n",
-      "\n",
-      "Loading required package: R.utils\n",
-      "\n",
-      "Loading required package: R.oo\n",
-      "\n",
-      "Loading required package: R.methodsS3\n",
-      "\n",
-      "R.methodsS3 v1.8.2 (2022-06-13 22:00:14 UTC) successfully loaded. See ?R.methodsS3 for help.\n",
-      "\n",
-      "R.oo v1.27.1 (2025-05-02 21:00:05 UTC) successfully loaded. See ?R.oo for help.\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘R.oo’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:R.methodsS3’:\n",
-      "\n",
-      "    throw\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:methods’:\n",
-      "\n",
-      "    getClasses, getMethods\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    attach, detach, load, save\n",
-      "\n",
-      "\n",
-      "R.utils v2.13.0 (2025-02-24 21:20:02 UTC) successfully loaded. See ?R.utils for help.\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘R.utils’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:utils’:\n",
-      "\n",
-      "    timestamp\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    cat, commandArgs, getOption, isOpen, nullfile, parse, use, warnings\n",
-      "\n",
-      "\n",
-      "Loading required package: primes\n",
-      "\n",
-      "Loading required package: rlist\n",
-      "\n",
-      "Loading required package: yaml\n",
-      "\n",
-      "Loading required package: lightgbm\n",
-      "\n",
-      "Loading required package: DiceKriging\n",
-      "\n",
-      "Loading required package: mlrMBO\n",
-      "\n",
-      "Loading required package: mlr\n",
-      "\n",
-      "Loading required package: ParamHelpers\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘ParamHelpers’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:R.utils’:\n",
-      "\n",
-      "    isVector\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘mlr’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:R.utils’:\n",
-      "\n",
-      "    resample, setThreshold\n",
-      "\n",
-      "\n",
-      "Loading required package: smoof\n",
-      "\n",
-      "Loading required package: checkmate\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘checkmate’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:DiceKriging’:\n",
-      "\n",
-      "    checkNames\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:R.utils’:\n",
-      "\n",
-      "    asInt\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘smoof’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:R.oo’:\n",
-      "\n",
-      "    getDescription, getName\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cargo las librerias que necesito\n",
     "require(\"data.table\")\n",
@@ -181,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "53871622-8978-400b-ad8e-fc044562e7fd",
    "metadata": {},
    "outputs": [],
@@ -192,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "401ba2de-d27b-4bf0-8c4d-a28e69082800",
    "metadata": {},
    "outputs": [],
@@ -207,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "97217cda-bd1a-49db-8530-935deb8d6591",
    "metadata": {},
    "outputs": [],
@@ -220,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "1caf7b66-2c0e-4bf2-b11a-4349a1f5552e",
    "metadata": {},
    "outputs": [],
@@ -279,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "268da04e-e6af-4c5b-a5bf-69d06a71aa24",
    "metadata": {},
    "outputs": [],
@@ -296,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "5a4dba30-cdbe-40dc-a456-8db93245541a",
    "metadata": {},
    "outputs": [],
@@ -373,23 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "832618b2-01d8-41c1-8b1b-ea143f62b364",
+   "execution_count": 21,
+   "id": "232118e3-3f42-4f5e-bd45-5a2df199953a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# carpeta de trabajo\n",
+    "setwd(PATH_EXPERIMENTS)\n",
+    "dir.create(EXPERIMENT_FOLDER, showWarnings=FALSE)\n",
     "\n",
-    "setwd(\"/content/buckets/b1/exp\")\n",
+    "setwd(PATH_THIS_EXPERIMENT)\n",
+    "optimization_folder <- \"optimization\"\n",
+    "dir.create(optimization_folder, showWarnings=FALSE)\n",
     "\n",
-    "experimento_folder <- paste0(\"HT\", PARAM$experimento)\n",
-    "dir.create(experimento_folder, showWarnings=FALSE)\n",
-    "setwd( paste0(\"/content/buckets/b1/exp/\", experimento_folder ))"
+    "setwd(PATH_BO)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "5e2d0f3c-3da0-48cb-ae4d-eb860951ff7f",
    "metadata": {},
    "outputs": [],
