fix: order dtrain

--- a/src/churn/5002/preprocess.ipynb
+++ b/src/churn/5002/preprocess.ipynb
@@ -2,10 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "615aa3ae-7e78-4c9b-9ac4-f633c4982ab7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sourcing: 01_clase_ternaria.R\n",
+      "\n",
+      "Sourcing: 02_percentilizar_variables.R\n",
+      "\n",
+      "Sourcing: 03_agregar_lags_dataset.R\n",
+      "\n",
+      "Sourcing: 04_entrenar_modelos.R\n",
+      "\n",
+      "Sourcing: 05_ensamblar_promedio.R\n",
+      "\n",
+      "Sourcing: 06_realidad_inicializar.R\n",
+      "\n",
+      "Sourcing: 07_realidad_evaluar.R\n",
+      "\n",
+      "Sourcing: 08_particionar.R\n",
+      "\n",
+      "Sourcing: 09_armar_archivo_envios.R\n",
+      "\n",
+      "Sourcing: 10_enviar_kaggle.R\n",
+      "\n",
+      "Sourcing: 11_comparar_cortes.R\n",
+      "\n",
+      "✅ Todos los utils fueron cargados correctamente.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "source(\"/home/vickydiliscia/dmeyf2025/src/churn/5002/config.r\")\n",
     "\n",
@@ -26,10 +57,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4e20bdc1-868d-4312-8919-131cfbf29705",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: parallel\n",
+      "\n",
+      "Loading required package: R.utils\n",
+      "\n",
+      "Loading required package: R.oo\n",
+      "\n",
+      "Loading required package: R.methodsS3\n",
+      "\n",
+      "R.methodsS3 v1.8.2 (2022-06-13 22:00:14 UTC) successfully loaded. See ?R.methodsS3 for help.\n",
+      "\n",
+      "R.oo v1.27.1 (2025-05-02 21:00:05 UTC) successfully loaded. See ?R.oo for help.\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘R.oo’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:R.methodsS3’:\n",
+      "\n",
+      "    throw\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:methods’:\n",
+      "\n",
+      "    getClasses, getMethods\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    attach, detach, load, save\n",
+      "\n",
+      "\n",
+      "R.utils v2.13.0 (2025-02-24 21:20:02 UTC) successfully loaded. See ?R.utils for help.\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘R.utils’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:utils’:\n",
+      "\n",
+      "    timestamp\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    cat, commandArgs, getOption, isOpen, nullfile, parse, use, warnings\n",
+      "\n",
+      "\n",
+      "Loading required package: primes\n",
+      "\n",
+      "Loading required package: rlist\n",
+      "\n",
+      "Loading required package: yaml\n",
+      "\n",
+      "Loading required package: DiceKriging\n",
+      "\n",
+      "Loading required package: mlrMBO\n",
+      "\n",
+      "Loading required package: mlr\n",
+      "\n",
+      "Loading required package: ParamHelpers\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘ParamHelpers’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:R.utils’:\n",
+      "\n",
+      "    isVector\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘mlr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:R.utils’:\n",
+      "\n",
+      "    resample, setThreshold\n",
+      "\n",
+      "\n",
+      "Loading required package: smoof\n",
+      "\n",
+      "Loading required package: checkmate\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘checkmate’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:DiceKriging’:\n",
+      "\n",
+      "    checkNames\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:R.utils’:\n",
+      "\n",
+      "    asInt\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘smoof’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:R.oo’:\n",
+      "\n",
+      "    getDescription, getName\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# cargo las librerias que necesito\n",
     "require(\"data.table\")\n",
@@ -262,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "232118e3-3f42-4f5e-bd45-5a2df199953a",
    "metadata": {},
    "outputs": [],
@@ -279,7 +423,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
+   "id": "9d764c9b-49c7-43e8-a925-bb8a6b89cd51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'/home/vickydiliscia/buckets/b1/exp/EXP5002/optimization'"
+      ],
+      "text/latex": [
+       "'/home/vickydiliscia/buckets/b1/exp/EXP5002/optimization'"
+      ],
+      "text/markdown": [
+       "'/home/vickydiliscia/buckets/b1/exp/EXP5002/optimization'"
+      ],
+      "text/plain": [
+       "[1] \"/home/vickydiliscia/buckets/b1/exp/EXP5002/optimization\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "getwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "5e2d0f3c-3da0-48cb-ae4d-eb860951ff7f",
    "metadata": {},
    "outputs": [],
@@ -290,7 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
+   "id": "a40c68af-d4ab-4d3c-a605-8588a758c490",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_train <- dataset[foto_mes %in% PARAM$train]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "51f29d66-b711-42a4-b58f-eed066393c0c",
    "metadata": {},
    "outputs": [
@@ -298,45 +481,81 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A data.table: 3 × 3</caption>\n",
+       "<caption>A data.table: 12 × 3</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>foto_mes</th><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
        "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>202102</td><td>BAJA+1  </td><td>   831</td></tr>\n",
-       "\t<tr><td>202102</td><td>BAJA+2  </td><td>  1032</td></tr>\n",
+       "\t<tr><td>202101</td><td>CONTINUA</td><td>160080</td></tr>\n",
        "\t<tr><td>202102</td><td>CONTINUA</td><td>160292</td></tr>\n",
+       "\t<tr><td>202103</td><td>CONTINUA</td><td>161119</td></tr>\n",
+       "\t<tr><td>202104</td><td>CONTINUA</td><td>161333</td></tr>\n",
+       "\t<tr><td>202101</td><td>BAJA+2  </td><td>   825</td></tr>\n",
+       "\t<tr><td>202102</td><td>BAJA+1  </td><td>   831</td></tr>\n",
+       "\t<tr><td>202103</td><td>BAJA+2  </td><td>   951</td></tr>\n",
+       "\t<tr><td>202104</td><td>BAJA+1  </td><td>   955</td></tr>\n",
+       "\t<tr><td>202102</td><td>BAJA+2  </td><td>  1032</td></tr>\n",
+       "\t<tr><td>202103</td><td>BAJA+1  </td><td>  1039</td></tr>\n",
+       "\t<tr><td>202104</td><td>BAJA+2  </td><td>  1130</td></tr>\n",
+       "\t<tr><td>202101</td><td>BAJA+1  </td><td>   622</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A data.table: 3 × 3\n",
+       "A data.table: 12 × 3\n",
        "\\begin{tabular}{lll}\n",
        " foto\\_mes & clase\\_ternaria & N\\\\\n",
        " <int> & <fct> & <int>\\\\\n",
        "\\hline\n",
-       "\t 202102 & BAJA+1   &    831\\\\\n",
-       "\t 202102 & BAJA+2   &   1032\\\\\n",
+       "\t 202101 & CONTINUA & 160080\\\\\n",
        "\t 202102 & CONTINUA & 160292\\\\\n",
+       "\t 202103 & CONTINUA & 161119\\\\\n",
+       "\t 202104 & CONTINUA & 161333\\\\\n",
+       "\t 202101 & BAJA+2   &    825\\\\\n",
+       "\t 202102 & BAJA+1   &    831\\\\\n",
+       "\t 202103 & BAJA+2   &    951\\\\\n",
+       "\t 202104 & BAJA+1   &    955\\\\\n",
+       "\t 202102 & BAJA+2   &   1032\\\\\n",
+       "\t 202103 & BAJA+1   &   1039\\\\\n",
+       "\t 202104 & BAJA+2   &   1130\\\\\n",
+       "\t 202101 & BAJA+1   &    622\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A data.table: 3 × 3\n",
+       "A data.table: 12 × 3\n",
        "\n",
        "| foto_mes &lt;int&gt; | clase_ternaria &lt;fct&gt; | N &lt;int&gt; |\n",
        "|---|---|---|\n",
-       "| 202102 | BAJA+1   |    831 |\n",
-       "| 202102 | BAJA+2   |   1032 |\n",
+       "| 202101 | CONTINUA | 160080 |\n",
        "| 202102 | CONTINUA | 160292 |\n",
+       "| 202103 | CONTINUA | 161119 |\n",
+       "| 202104 | CONTINUA | 161333 |\n",
+       "| 202101 | BAJA+2   |    825 |\n",
+       "| 202102 | BAJA+1   |    831 |\n",
+       "| 202103 | BAJA+2   |    951 |\n",
+       "| 202104 | BAJA+1   |    955 |\n",
+       "| 202102 | BAJA+2   |   1032 |\n",
+       "| 202103 | BAJA+1   |   1039 |\n",
+       "| 202104 | BAJA+2   |   1130 |\n",
+       "| 202101 | BAJA+1   |    622 |\n",
        "\n"
       ],
       "text/plain": [
-       "  foto_mes clase_ternaria N     \n",
-       "1 202102   BAJA+1            831\n",
-       "2 202102   BAJA+2           1032\n",
-       "3 202102   CONTINUA       160292"
+       "   foto_mes clase_ternaria N     \n",
+       "1  202101   CONTINUA       160080\n",
+       "2  202102   CONTINUA       160292\n",
+       "3  202103   CONTINUA       161119\n",
+       "4  202104   CONTINUA       161333\n",
+       "5  202101   BAJA+2            825\n",
+       "6  202102   BAJA+1            831\n",
+       "7  202103   BAJA+2            951\n",
+       "8  202104   BAJA+1            955\n",
+       "9  202102   BAJA+2           1032\n",
+       "10 202103   BAJA+1           1039\n",
+       "11 202104   BAJA+2           1130\n",
+       "12 202101   BAJA+1            622"
       ]
      },
      "metadata": {},
@@ -351,17 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "a40c68af-d4ab-4d3c-a605-8588a758c490",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_train <- dataset[foto_mes %in% PARAM$train]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "ba3dda77-d905-47ff-ac31-a7638bbf59cf",
    "metadata": {},
    "outputs": [],
@@ -377,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "777fc482-c32f-460e-aea6-265ca2c19072",
    "metadata": {},
    "outputs": [],
@@ -399,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "28e94ca8-6903-4f5f-9798-15ddf7cdb48b",
    "metadata": {},
    "outputs": [],
@@ -414,47 +623,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "4fb1b0e3-c817-43fd-b75f-1545f8a15194",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "49844"
-      ],
-      "text/latex": [
-       "49844"
-      ],
-      "text/markdown": [
-       "49844"
-      ],
-      "text/plain": [
-       "[1] 49844"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "458"
-      ],
-      "text/latex": [
-       "458"
-      ],
-      "text/markdown": [
-       "458"
-      ],
-      "text/plain": [
-       "[1] 458"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dejo los datos en el formato que necesita LightGBM\n",
     "\n",
@@ -478,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "39aa0db6-04fb-414b-bf67-f885046411e1",
    "metadata": {},
    "outputs": [],
@@ -514,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "56991c0e-bfac-4949-852a-cfad203469a8",
    "metadata": {},
    "outputs": [],
