--- a/src/churn/5002/05_test_model.ipynb
+++ b/src/churn/5002/05_test_model.ipynb
@@ -991,7 +991,60 @@
    "id": "0ac3322f-233c-4ea4-a0f1-c37293510229",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Leer archvio predicciones\n",
+    "setwd(PATH_TEST_PREDICTION)\n",
+    "pred_file <- paste0(\"prediccion_\",TAG,\"_test\", \".txt\")\n",
+    "\n",
+    "# Verificá que exista\n",
+    "stopifnot(file.exists(pred_file))\n",
+    "\n",
+    "tb_prediccion <- fread(pred_file, sep = \"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c7a3e60-33c1-4e0c-bb6a-751827f04744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# aplico el modelo a los datos sin clase\n",
+    "dfuture <- dataset[foto_mes %in% PARAM$future_final]\n",
+    "\n",
+    "# inicilizo el dataset  drealidad\n",
+    "drealidad <- realidad_inicializar( dfuture, PARAM)\n",
+    "\n",
+    "cortes <- PARAM$cortes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "951730c6-39e2-43c9-aa3d-3c698e390613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comparaciones <- comparar_cortes(tb_prediccion, cortes, drealidad)\n",
+    "plot_cortes(comparaciones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2b10e57-d3a6-4007-abf7-fb7f32750df2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res <- comparar_semillas(\n",
+    "  pfuture       = dfuture,\n",
+    "  pparam        = PARAM,          # o tu lista de parámetros\n",
+    "  tb_prediccion = tb_prediccion,  # con columnas numero_de_cliente, prob\n",
+    "  cortes        = PARAM$cortes,   # p.ej. c(8000, 9000, 10000, ...)\n",
+    "  semillas      = SEEDS\n",
+    ")\n",
+    "plot_semillas(res)"
+   ]
   }
  ],
  "metadata": {
